# ticket_processing

./: package.json  pyproject.toml  start.py
app/: ai.py  celery_app.py  database.py  main.py  models.py  settings.py
tests/: test.py
