[tool.poetry]
name = "support-ticket-processor"
version = "0.1.0"
description = "This is a testing task. ticket-processor based on LLM models like OpneAI and Anthropic"
authors = ["Serhii <snow55mountain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
databases = "^0.9.0"
pydantic = "^2.8.2"
celery = "^5.4.0"
aiohttp = "^3.9.5"
psycopg2-binary = "^2.9.9"
openai = "^1.35.10"
anthropic = "^0.30.1"
redis = "^5.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
